tut2app/tut2app/static/tut2_default.css
div.tut_entry {
    border-radius: 0.4em;
    background-color: #ddd;
    padding: 0.4em;
    margin-bottom: 0.2em;
    margin-left: 0.3em;
    position: relative;   /* so that children can be positioned absolutely relative to this one, see http://www.wickham43.net/divboxes.php */
}

div.tut_section_label {
    margin-top: 0.8em;
    margin-bottom: 0.2em;
    font-weight: bold;
}

#tut-entry-template {
    display: none;
}
#tut-section-header-template {
    display: none;
}

.tut_entry div {
    border-radius: 0.3em;
    padding: 0.1em 0.4em 0.1em 0.4em;
    xbackground-color: red;
    display: inline;
}

div.tut_container {
    border-radius: 0;
    padding: 0 0 0 0;
}

div.currently_dragging_starttime {
    background-color: yellow !important
}
div.tut_right {
    float: right;
    xvertical-align: bottom;
    padding: 0 0 0 0;
}

div.tut_resume {
    vertical-align: top;
    padding: 0 0 0 0;
    xxbackground-color: lightgreen;
    display: none;
}
div.tut_remove {
    vertical-align: top;
    padding: 0 0 0 0;
    xxbackground-color: lightgreen;
    display: none;
}

.tut_entry:hover div.tut_resume {
    display: inline;
}
.tut_entry:hover div.tut_remove {
    display: inline;
}

.tut_duration {
    vertical-align: top;
    background-color: lightgreen;
}

div.tut_starttime {
    background-color: #eee;
    padding-left: 1.2em;
    margin-right: 0.5em;
}

div.tut_project {
    background-color: violet;
}

div.tut_logentry {
    background-color: #eee;
}

div.tut_hidden {
    visibility: hidden;
}

div.tut_notyetvalid {
    color: #ccc;
    background-color: #eee;
}

//body p {
//    margin-bottom: 0.1em;
//    font-weight: bold;
//}

body {
    font-family: sans-serif;
}

.tut_project.tut_proj_100 {
    background-color: red;
}
.tut_project.tut_proj_101 {
    background-color: yellow;
}
.tut_project.tut_proj_102 {
    background-color: blue;
}
.tut_project.tut_proj_103 {
    background-color: green;
}
.tut_project.tut_proj_104 {
    background-color: white;
}

.tut_menu {
    position: absolute;
    top: .5em;
    right: .5em;
}

.tut_menu .choice {
    border-radius: 0.4em;
    x-background-color: #ddd;
    padding: 0.2em;
    margin-bottom: 0.1em;
}

.tut_menu .active {
    background-color: #ddd;
}

.flashes {
    background-color: yellow;
    padding-top: .2em;
    padding-bottom: .2em;
}

.tut_entry div input {
    display: none;
}

.tut_entry div.tut_editing div {
    display: none;
}

.tut_entry div.tut_editing input {
    display: inline;
    margin-left: 1.2em;
    margin-right: 0.5em;
}

/* Action links for each entry */
div.tut_insertabove {
    g-vertical-align: top;
    g-padding: 0 0 0 0;
    background-color: #ddd;
    opacity: 0.5;
    display: none;  /* only show on :hover, see below */
    position: absolute;
    top: -20px;
    left: 170px;
}
.tut_entry:hover div.tut_insertabove {
    display: inline;
}
div.tut_insertabove:hover {
    opacity: 1.0;
}

span.debug_menu {
    opacity: 0.0;
    font-size: 80%;
}

span.debug_menu:hover {
    opacity: .8;
}

div.tut_insertbelow {
    g-vertical-align: top;
    g-padding: 0 0 0 0;
    background-color: #ddd;
    opacity: 0.5;
    display: none;  /* only show on :hover, see below */
    position: absolute;
    top: +30px;
    left: 170px;
    z-index: +1;
}
.tut_entry:hover div.tut_insertbelow {
    display: inline;
}
div.tut_insertbelow:hover {
    opacity: 1.0;
}

div.tut_adjstarttime {
    position: absolute;
    top: 5px;
    left: 5px;
    display: none;
}
.tut_entry:hover div.tut_adjstarttime {
    display: inline;
}

